--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react-dom": "^18.2.0",
     "react-filter-search": "^1.1.11",
     "react-icons": "^4.6.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-use-cart": "^1.13.0",
+    "sweetalert2": "^11.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
